@@ -254,7 +254,7 @@ handle_powerGuruUnitAddress(netsnmp_mib_handler *handler,
      * a instance handler also only hands us one request at a time, so 
      * we don't need to loop over a list of requests; we'll only get one. 
      */
-  int foo = 666;
+  int foo = 676;
   
     switch (reqinfo->mode) {
     case MODE_GET:
